# qrcodepix

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/qrcodepix/: __init__.py
src/qrcodepix/cli/: main.py
src/qrcodepix/core/: crc16.py  payload.py
src/qrcodepix/generator/: qr.py
src/webapp/: app_streamlit.py
tests/: test_payload.py
