[project]
name = "qrcodepix"
version = "0.1.0"
description = ""
authors = [
    {name = "Jean Carlos",email = "jeancc.costa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "segno (>=1.6.6,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "qrcode[pil,svg] (>=8.2,<9.0)",
    "flask (>=3.1.2,<4.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "qrcodepix", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
